@@ -36,6 +36,8 @@ Fixes:
 New Commands:
 
 - Widgets: add "does_item_exist" command #119
+- Widgets: add "get_item_children" command #123
+- Widgets: add "get_all_items" command #123
 
 
 -----------------------------------------------------------------------
